--- a/vignettes/patchclampplotteR.Rmd
+++ b/vignettes/patchclampplotteR.Rmd
@@ -798,13 +798,13 @@ The plotting functions provided in `patchclampplotteR` are actually just shortcu
 
 As an example, here is the same `$percent_change_data` from `make_summary_EPSC_data()` presented in **8** different ways!! I haven't included the code and data here because this is from my own research, but the list below should give you a good idea of what functions you could use to create similar plots.
 
- * **A)** *Grouped categorical scatterplot* with `geom_point(position = position_dodge` to separate the sexes.
+ * **A)** *Grouped categorical scatterplot* with `geom_point(position = position_dodge)` to separate the sexes.
  * **B)** *Sina plot*. Uses `geom_sina` from the `ggforce` package.
  * **C)** *Coloured violin plot with sina plot*.
  * **D)** *Violin plot with coloured sina plot*.
  * **E)** *Boxplot + sina plot* where `fill = treatment`.
  * **F)** *Boxplot + sina plot* where `colour = treatment`.
- * **G)** *Strip plot * (this is just `geom_point(shape = 95, size = 10)`, with `alpha = sex`)
+ * **G)** *Barcode plot * (this is just `geom_point(shape = 95, size = 10)`, with `alpha = sex`)
  * **H)** *Half-eye plot* using `stat_halfeye()` from the `ggdist()` package
 
 
