--- a/README.Rmd
+++ b/README.Rmd
@@ -100,12 +100,12 @@ Plot a representative recording trace showing spontaneous currents from a raw Ax
 plot_spontaneous_current_trace(
   data = sample_abf_file,
   plot_colour = "#6600cc",
-  include_scale_bar = "yes",
+  plot_category = 2,
+  plot_treatment = "Control",
+  state = "Baseline",
   plot_episode = "epi1",
-  scale_bar_x_length = 1,
-  scale_bar_y_length = 10,
-  plot_x_min = 1,
-  plot_x_max = 3
+  trace_annotation = "Baseline",
+  geom_text_colour = "#6600cc"
 )
 ```
 
