Added downloadable custom theme csv

--- a/vignettes/articles/FAQ.Rmd
+++ b/vignettes/articles/FAQ.Rmd
@@ -329,6 +329,10 @@ Step 1: Create a `.csv` file with two columns (`option` and `value`), modelled a
 
 > **Important!**: Your .csv must have identical columns and rows as the sample data, or else the plots won't work!
 
+```{r download-custom-theme-csv, echo=F}
+xfun::embed_file("my_custom_theme_options.csv")
+```
+
 Step 2: Read in the `.csv` file in using `utils::read_csv()`. This will now be an object in your R environment.
 
 Step 3: **Important!!** You must convert the first column (`option`) into the `rownames`. This is a mandatory step to allow the theme_options to be indexed by row name in plotting functions.
